# env-code-agent-3

./: .gitignore  README.md
examples/: petstore-constraints.txt
output-realworld/cloned-env/: .dockerignore  .gitignore  Dockerfile  mprocs.yaml  package.json
output-realworld/cloned-env/.github/workflows/: deploy.yml
output-realworld/cloned-env/data/: schema.sql
output-realworld/cloned-env/mcp/: pyproject.toml
output-realworld/cloned-env/mcp/src/realworld_mcp/: __init__.py
output-realworld/cloned-env/server/: package.json  tsconfig.json
output-realworld/cloned-env/server/src/: index.ts
output-realworld/cloned-env/server/src/lib/: db.ts
output-realworld/cloned-env/server/src/routes/: articles.ts  comments.ts  profiles.ts  tags.ts  user.ts  users.ts
output-with-constraints/cloned-env/: .dockerignore  .gitignore  .spec.json  API_DOCUMENTATION.md  Dockerfile  README.md  mprocs.yaml  package.json  workflows.yaml
output-with-constraints/cloned-env/.github/workflows/: deploy.yml
output-with-constraints/cloned-env/data/: schema.sql  schema_new.sql  seed.db-shm
output-with-constraints/cloned-env/mcp/: README.md  pyproject.toml
output-with-constraints/cloned-env/mcp/src/petstore_mcp/: __init__.py  client.py  server.py
output-with-constraints/cloned-env/mcp/src/swagger_petstore_mcp/: __init__.py  client.py  server.py
output-with-constraints/cloned-env/server/: package.json  tsconfig.json
output-with-constraints/cloned-env/server/src/: index.ts
output-with-constraints/cloned-env/server/src/lib/: auth.ts  db.ts
output-with-constraints/cloned-env/server/src/routes/: auth.ts  pet.ts  (+4 more)
scripts/: run_workflows.py
src/: cli.py
src/agents/: __init__.py  business_requirement_agent.py  code_generator_agent.py  exploration_agent.py  spec_ingestion_agent.py
src/core/: base_agent.py  workflow_runner.py
