[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "realworld-mcp"
version = "1.0.0"
description = "MCP server for RealWorld Conduit API"
authors = [{name = "RealWorld Team"}]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0"
]
requires-python = ">=3.11"

[project.scripts]
realworld-mcp = "realworld_mcp.server:main"