[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "petstore-mcp"
version = "1.0.0"
description = "MCP server for Swagger Petstore API"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0"
]

[tool.uv]
dev-dependencies = []

[project.scripts]
petstore-mcp = "petstore_mcp.server:main"