[project]
name = "petstore-mcp"
version = "0.1.0"
description = "MCP server for Petstore API"
authors = [
    { name = "Fleet", email = "fleet@example.com" }
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0"
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0"
]